--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>carmix-collector</name>
   <url>http://maven.apache.org</url>
+  <properties>
+  	<maven.compiler.source>1.7</maven.compiler.source>
+  	<maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
   <dependencies>
 	<dependency>
 	  <groupId>org.farng.mp3</groupId>
@@ -15,6 +19,11 @@
 <!--       <scope>system</scope>
 	    <systemPath>${project.basedir}/src/main/resources/jid3lib-0.5.1.jar</systemPath>
  -->
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.4</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
