--- a/pom.xml
+++ b/pom.xml
@@ -51,4 +51,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.7.0</version>
+        </plugin>
+    </plugins>
+  </build>
 </project>
