--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <powermock.version>2.0.0-beta.5</powermock.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>net.jthink</groupId>
+      <artifactId>jaudiotagger</artifactId>
+      <version>2.2.3</version>
+    </dependency>
 	<dependency>
 	  <groupId>org.farng.mp3</groupId>
       <artifactId>jid3lib</artifactId>
@@ -59,4 +64,10 @@
         </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <id>jaudiotagger-repository</id>
+      <url>https://dl.bintray.com/ijabz/maven</url>
+    </repository>
+  </repositories>
 </project>
