--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
       <artifactId>jaudiotagger</artifactId>
       <version>2.2.5</version>
     </dependency>
+    <!-- TODO - set up domain class project to publish to local Maven correctly -->
+	<dependency>
+	  <groupId>com.joelforjava.musicdb</groupId>
+      <artifactId>musicdb-domain-objects</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>system</scope>
+	    <systemPath>${project.basedir}/src/main/resources/musicdb-domain-objects-0.1-SNAPSHOT.jar</systemPath>
+	</dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy</artifactId>
+      <version>2.5.8</version>
+    </dependency>
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
